shimlang/test_scripts/errors/index_non_indexable.stderr
 1 | let x = 5; x[0];
                ^^^^
Error: Can't index Integer(5) with Integer(0)
